# fit4012-lab5-vanhieupc

./: CMakeLists.txt  Makefile  README.md  decrypt.cpp  encrypt.cpp  keyfile  report-1page.md  structures.h
scripts/: run_sample.sh
tests/: test_aes_compile.sh  test_encrypt_decrypt_roundtrip.sh  test_multiblock_padding.sh  test_tamper_negative.sh  test_wrong_key_negative.sh
